--- a/vignettes/Documentation/tradeDocumentation.Rnw
+++ b/vignettes/Documentation/tradeDocumentation.Rnw
@@ -17,7 +17,7 @@
 \usepackage{hyperref}
 \usepackage[ruled, vlined]{algorithm2e}
 \usepackage{mathtools}
-\usepackage{draftwatermark}
+%\usepackage{draftwatermark}
 \usepackage{float}
 \usepackage{placeins}
 \usepackage{mathrsfs}
@@ -97,7 +97,9 @@
 \Abstract{
 
 \noindent
-This vignette provides a detailed description of the trade modules.
+This vignette provides a detailed description of the trade modules.\\
+This paper is dynamically generated on \today{} and is subject to
+changes and updates. Version 1.
 }
 
 \Keywords{Agricultural Trade, Tariff Line, Eurostat, Mirroring}
@@ -123,7 +125,7 @@ The trade module is divided in two submodules: {\tt complete\_tf\_cpc} and {\tt 
 \section{Complete tf cpc}
 
 \subsection{Data}
-Raw data are provided by the SWS Team (subunit of Team F) for both UNSD Tariffline and Eurostat Data. The data have been already prefiltered:
+Raw data are provided by the SWS Team (subunit of Team F) for both UNSD Tariffline and Eurostat Data. The data have been already prefiltered in the following way:
 \begin{itemize}
 \item [\bf{Eurostat}]
 \begin{itemize}
@@ -136,52 +138,9 @@ Raw data are provided by the SWS Team (subunit of Team F) for both UNSD Tariffli
 \item code of HS (comm) just numeric (letters are not allowed)
 \end{itemize}
 \end{itemize}
+If any codes are still alphanumeric please ask team F to check, since this step is performed by them.\\
 The module downloads only records of commodities of interest for Tariffline Data. The HS chapters are the following: 01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 42, 43, 50, 51, 52, 53. In the future, if other commotidy are of interest for the division, it is important to include additional chapter in the first step of the downloading. For Eurostat Data no filtering is applied.
 
-% This is the summary of the data received:
-% \begin{itemize}
-% \item[\bf{Eurostat}]
-% \begin{itemize}
-% \item[2009] Number of records: 8665414, distribution of digits: 2 - 446403 (5\%), 8 - 8219011 (95\%)
-% \item[2010] Number of records: 8861460, distribution of digits: 2 - 449191 (5\%), 8 - 8412269 (95\%)
-% \item[2011] Number of records: 8977093, distribution of digits: 2 - 458032 (5\%), 8 - 8519061 (95\%)
-% \item[2012] Number of records: 9299996, distribution of digits: 2 - 468915 (5\%), 8 - 8831081 (95\%)
-% \item[2013] Number of records: 9493511, distribution of digits: 2 - 476782 (5\%), 8 - 9016729 (95\%)
-% \item[2014] Number of records: 9610127, distribution of digits: 2 - 480525 (5\%), 8 - 9129602 (95\%)
-% \end{itemize}
-% \item[\bf{UNSD}]
-% \begin{itemize}
-% \item[2009] Number of records: 40262359, distribution of digits: 2 - 62687 (0.2\%), 4 - 822372 (0.02\%), 5 - 63 (0\%), 6 - 7197277 (18\%), 7 - 331 (0\%), 8 - 20218041 (50\%), 9 - 722018 (2\%), 10 - 6789612 (17\%), 11 - 2769625 (7\%), 12 - 1680333 (4\%)
-% \item[2010] Number of records: 46654452, distribution of digits: 2 - 30547 (0.1\%), 4 - 199688 (0.4\%), 5 - 0 (0\%), 6 - 12394503 (27\%), 7 - 54685 (0.1\%), 8 - 21595733 (46\%), 9 - 608860 (1\%), 10 - 9102501 (20\%), 11 - 2667935 (6\%), 12 - 0 (0\%)
-% \item[2011] Number of records: 63535135, distribution of digits: 2 - 41486 (0.1\%), 4 - 1640555 (2.6\%), 5 - 1 (0\%), 6 - 14427100 (23\%), 7 - 8447 (0\%), 8 - 28948926 (46\%), 9 - 636035 (1\%), 10 - 13379759 (21\%), 11 - 2645793 (4\%), 12 - 1807033 (3\%)
-% \item[2012] Number of records: 66175819, distribution of digits: 2 - 42165 (0.1\%), 4 - 131569 (0.2\%), 5 - 0 (0\%), 6 - 18723116 (28\%),  7- 14986 (0\%), 8 - 32048866 (48\%), 9 - 643335 (1\%), 10 - 13565552 (21\%), 11 - 1006230 (1.5\%), 12 - 0 (0\%)
-% \item[2013] Number of records: 70075550, distribution of digits: 2 - 25395 (0\%), 4 - 995 (0\%), 5 - 0 (0\%), 6 - 26224495 (37\%), 7 - 16979 (0\%), 8 - 32652742 (47\%), 9 - 654930 (1\%), 10 - 9765518 (14\%), 11 - 734496 (1\%), 12 - 0 (0\%)
-% \item[2014] Number of records: 79728175, distribution of digits: 2 - 59500 (0.1\%), 4 - 222713 (0.3\%), 5 - 0 (0\%), 6 - 25279829 (32\%), 7 - 66423 (0.1\%), 8 - 42679600 (54\%), 9 - 649753 (1\%), 10 - 10088068 (13\%), 11 - 682289 (1\%), 12 - 0 (0\%)
-% \end{itemize}
-% \end{itemize}
-
-%\subsection{Example of tables}
-<<echo=FALSE>>=
-# Set up a database connection so we can pull the datasets
-#library(faosws)
-library(data.table)
-library(xtable)
-#SetClientFiles("~/R certificate files/QA/")
-#GetTestEnvironment(
-#    baseUrl = "https://hqlqasws1.hq.un.fao.org:8181/sws",
-#    token = "c585c410-fb9e-44ea-ba36-ef940d32185d"
-#)
-@
-
-
-%\begin{itemize}
-%    \item Tariff Line:
-%<<echo = FALSE, results='tex',comment=''>>=
-%load("~/Dropbox/tradeproc/tldata_raw_from_db.RData")
-%print(xtable(head(tldata,4)), include.rownames = FALSE)
-%@
-
-%\end{itemize}
 
 \subsection{Process}
 
@@ -189,34 +148,35 @@ library(xtable)
 At this stage a standardization/mapping step is performed. The details are devided between UNSD Tariffline and Eurostat due to the nature of the differences among the two datasets.
 \begin{itemize}
 \item [\bf{UNSD Tariffline}]
-UNSD Tariffline data reports area code with Tariffline M49 standard (which are different for official M49). The area code is converted in FAO country code using a specific convertion table provided by Team ENV. Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) are separately saved and removed from further analyses.\\
-Commodity codes are reported in HS codes ({\it Harmonized Commodity Description and Coding System}). The codes are converted in FCL (FAO Commodity List) codes. This step was performed using the package ({\tt hsfclmap} developed by Alexander Matrunich), but it is now incorporated in the module. In this step, all the mapping between HS and FCL code is stored. The algotithm tries to map at all possible lenght (i.e. if a reporting country has a record with hs code at 12 digits and in the package, for the same reporting country, a HS-to-FCL mapping is available at a lower level, for example 10 digits, the algorithm will include in the mapping all the records having the same 10 digits).\\
-If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed.\\ All records filtered out are saved in specific variables, but not used in the output at the time being. Further develop of the module
-Information of the FCL units is added at the end of this step.\\
-Just for UNSD Tariffline data convertion of units of measurements are applied to meet FAO standards, where all weights are reported in metric tonnes, animals in heads or 1000 heads and for some commodity just the value is provided.\\
-The flow codes of re-Import (4) are recoded into Import (1) and codes of re-Export (3) to Export (2). This procedure is applied following UNSD standards:
+\begin{enumerate}
+\item UNSD Tariffline data reports area code with Tariffline M49 standard (which are different for official M49). The area code is converted in FAO country code using a specific convertion table provided by Team ENV. Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) are separately saved and removed from further analyses.
+\item Commodity codes are reported in HS codes ({\it Harmonized Commodity Description and Coding System}). The codes are converted in FCL (FAO Commodity List) codes. This step is performed using table incorporated in the SWS. In this step, all the mapping between HS and FCL code is stored. If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed. All records without an FCL mapping are filtered out and saved in specific variables.
+\item Information of the FCL units is added.
+\item Just for UNSD Tariffline data convertion of units of measurements are applied to meet FAO standards, where all weights are reported in metric tonnes, animals in heads or 1000 heads and for some commodity just the value is provided.
+\item The flow codes of re-Import (4) are recoded into Import (1) and codes of re-Export (3) to Export (2). This procedure is applied following UNSD standards:
 \begin{quote}
 \underline{Distinction between Exports and Re-exports / Imports and Re-imports}\\
 Exports of a country can be distinguished as exports of domestic goods and exports of foreign goods. The second class is generally referred to as re-exports. The exports shown in our database contain both the exports of domestic and foreign goods. Re-exports are exports of foreign goods in the same state as previously imported; they are to be included in the country exports. It is recommended that they be recorded separately for analytical purposes. This may require the use of supplementary sources of information in order to determine the origin of re-exports, i.e., to determine that the goods in question are indeed re-exports rather than the export of goods that have acquired domestic origin through processing. Re-imports are goods imported in the same state as previously exported. They are included in the country imports. It is recommended that they be recorded separately for analytical purposes. This may require the use of supplementary sources of information in order to determine the origin of re-imports, i.e., to determine that the goods in question are indeed re-imports rather than the import of goods that have acquired foreign origin through processing. There are several reasons why an exported good might return to the country of origin. The exported good might be defective, the importer might have defaulted on payments or cancelled the order, the authorities might have imposed an import barrier, or demand or prices in the country of origin might have made it worthwhile to bring the good back.
 \end{quote}
+\end{enumerate}
 
 \item [\bf{Eurostat}]
-Eurostat data reports area code with geonomenclature standard. The are code is converted in FAO country code using a specific convertion table provided by Team B/C.  Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) is reported and the records for these area codes are removed.\\
-Commodity codes are reported in CN8 codes (Combined Nomenclature 8 digits). The codes are converted in FCL (FAO Commodity List) codes. This step is performed using the same package ({\tt hsfclmap}) as for UNSD Tariffline.
-If a specific record has a CN8 code not mapping to any specific FCL code, then the record is reported and removed.\\
-If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed.\\\\
-The possible solution for the missing links in the future using Natural language processing routines to read the metadata.\\
-Information of the FCL units is added at the end of this step.\\
-Values are converted from EUR to USD using the table with avarage currency for each year provided by Team B/C.\\
+\begin{enumerate}
+\item Eurostat classifies areas in their geonomenclature. The are code is converted in FAO country code using a specific convertion  table, stored in the SWS, provided by Team B/C.  Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) is reported and the records for these area codes are removed.
+\item Commodity codes are reported in CN8 codes (Combined Nomenclature 8 digits). The codes are converted in FCL (FAO Commodity List) codes. This step is performed using the same package ({\tt hsfclmap}) as for UNSD Tariffline.
+If a specific record has a CN8 code not mapping to any specific FCL code, then the record is reported and removed. If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed.\\
 Eurostat data are already provided in the correct units of measurements and do not need futher conversions.
+\item Information of the FCL units is added. This step is straighforward since for Eurostat the units are already corrected.
+\item Values are converted from EUR to USD using the table, stored in the SWS, with avarage currency for each year provided by Team B/C.
+\end{enumerate}
 \end{itemize}
 
 \subsubsection{Unified Official Trade Flows Dataset}
-UNSD Tariffline and Eurostat datasets are ready to be merged.
+UNSD Tariffline and Eurostat datasets are ready to be merged togheter. From UNSD Tariffline all the European countries are removed and the final tables has all the countries worldwide.
 
 \subsubsection{Standardization, editing and outlier detection}
 \begin{itemize}
-\item {\bf Application of Notes} Perennial and yearly specific notes are mdb files provided by the Team B/C already saved in a R friendly dataset. The notes might be year specific or for all years (in this case reported as NA) and might refer to HS or/and FCL codes. This notes (or adjustments) were developed during the years and they are available from 1997 to 2013. Notes of 2014 are copied from notes in 2013, as a partial solution, but this need future work in the future.\\
+\item {\bf Application of Notes} Perennial and yearly specific notes are mdb files provided by the Team B/C already saved in a R friendly dataset. The notes might be of different nature. They might be a multiplicative factor, or forcing a value. More information  about the notes can be provided by team B/C. The notes might be year specific or for all years (in this case reported as NA) and might refer to HS or/and FCL codes. This notes (or adjustments) were developed during the years and they are available from 1997 to 2013. Notes of 2014 are copied from notes in 2013, as a partial solution, but this need future work in the future.\\
 Comparing results between the new and the old procedure showed that sometimes the discrepancies between the two results are due to the application of the notes.\\
 Remark: at the time being, the notes with unspecified year and with application of a factor 1000 are removed, since in the previous years UNSD was reporting some data in tonnes, while now it reports all data in kg.\\
 
@@ -225,7 +185,7 @@ Remark: at the time being, the notes with unspecified year and with application 
 u_v = \frac{qty}{value}
 \end{equation}
 
-\item {\bf Outlier Detection and Imputation} The outlier are calculated based on the distribution of the unit of value for the same country, year and flow at the HS level. The reason to identify the outlier at the HS level is due to the fact that, under the same FCL code, different commodity might fall (i.e. maize seed and seed). The outlier are detecting using the Tukey's procedure:
+\item {\bf Outlier Detection and Imputation} Based on the untis of measurementes we might have cases of outlier. The target variables are traded quantities so the outlier test on the unit values is a tool to correct quantity data. The outlier are calculated based on the distribution of the unit of value for the same country, year and flow at the HS level (tariffline level). The reason to identify the outlier at the HS level is due to the fact that, under the same FCL code, different commodity might fall (i.e. maize seed and seed). The outlier are detecting using the Tukey's procedure:
 \begin{itemize}
 \item The Tukey's five number summary are calculated: minimum (m), lower-hinge ($lh$), median ($med$), upper-hinge ($uh$) and maximum ($M$).
 \item The coefficient for the outlier detection is set up as suggested by Tukey to 1.5 ($coef$).
@@ -239,7 +199,7 @@ u_v = \frac{qty}{value}
 \end{itemize}
 where $iqr$ is the interquartile range.\\
 
-The outlier are then corrected using the corresponding value and dividing it by the median unit of value of that specific commodity, country, flow and year. In this way only few official data are corrected.\\
+The traded quantieis outlier are then corrected using the corresponding value (which remain fixed) and dividing it by the median unit of value of that specific commodity, country, flow and year. In this way only few official quantity data are corrected.\\
 Remark: in the module, one of the input parameter for the user is the oultlier coefficient By default this is set up to 1.5. More info regaring the outlier coefficient is given in the Future Work section.
 
 \item {\bf Missing Quantities Detection and Imputation} For records in which the commodity has to be reported in quantity and the quantity is missing and the value is present, the corresponding quantity is imputed dividing the corresponding value by the median of the units of value of the corresponding commodity (HS level/country/flow/year)
@@ -252,24 +212,24 @@ The module produce the list of non-reporting countries: these are the countries 
 Both records with imputation with outlier or mirroring imputation have a special flag:
 \begin{itemize}
 \item {\tt flagObservationStatus}: this flag is {\bf I}, which means imputed
-\item {\tt flagMethod}: this flag is {\bf e}, which means estimated.
+\item {\tt flagMethod}: this flag is {\bf e}, which means estimated with a statistical algorithm.
 \end{itemize}
 For all the other records empty string flags are saved.\\
 More information on the Flag is given in the Future Work section.
 
 \subsection{Convertion to FAO SWS standards}
-At this point the table is almost ready to be save in the SWS. Additional mapping are necessary in order to respect the SWS standards:
+At this point the table is almost ready to be save in the SWS. Additional mapping and aggregation are necessary in order to respect the SWS standards:
 \begin{itemize}
-\item Conversion of FCL into CPC codes. This conversion is based on the table of conversion 2.1 expanded. If some FCL codes are not mapped into CPC ones, the corresponding records are filtered out.
-\item Concersion from FAO country code to M49. As before, if some countries are not correctly mapped, they are filtered out from the final output.
-\item The results are gathered based on elements codes available on the SWS. Before this step each record presents both quantity and value, while after this step each record represents or a quantity or a value.
+\item Conversion of FCL into CPC codes. This conversion is based on the table of conversion 2.1 expanded. If some FCL codes are not mapped into CPC ones, the corresponding records are filtered out. Since the mapping between FCL and CPC is one-to-one there is no aggregation at this point. The routine just add the corresponding CPC code.
+\item Concersion from FAO country code to M49.
+\item Each row of the final output must be or quantity or value specific, while so far the module keeps this information in one row. We therefore split this information in two separated rows.
 \end{itemize}
 
 The first submodule save the final output in the {\tt completed\_tf\_cpc\_m49} dataset, within the {\tt trade} domain.
 
 \section{Total trade CPC}
-This second submodule uses as input the output of the previous submodule. These two modules are separated because the two outputs are needed for different scopes.\\
-This module aggregates by reporters over partners countries to a single total trade for each unique CPC commodity code.\\
+This second submodule uses as input the output of the previous submodule. These two modules are separated because the two outputs are needed for different purposes, not only, the resulting matrices have different dimensions.\\
+This module aggregates total trade flow by reporting country for partners countries to a single total trade for each unique CPC commodity code.\\
 The module save the ouput into the dataset {\tt total\_trade\_cpc\_m49}, within the {\tt trade} domain.
 
 \newpage
@@ -283,61 +243,89 @@ The module save the ouput into the dataset {\tt total\_trade\_cpc\_m49}, within 
 
 \newpage
 \section{Future work}
-In this section all open problems and future work is discussed.\\
-To the reader who is supposed to code: please refer to the GitHub Issue page as more technical open issue.\\
 
 \subsection{Validation Steps}
 This section represents the most high priority task for the trade module.\\
 \subsubsection{Raw Data - Data content assessment}
-The pre-analyses of the assessment of the data has to be integrated in the module. In the vignettes folder, a sample of pre-analysis is given, but not integrated in the main module (file name: {\tt preanalysis\_2009.Rmd}). The pre-analysis script calculate the total number of recordsfor both Eurostat and UNSD Tariffline datasets and the distribution of lenght of the commodty HS codes (for UNSD Tariffline) and CN8 for Eurostat is performed. For each country we report if data includes imports, exports, re-exports and re-imports at all possible lenght.\\
-All records with hs-lenght (for UNSD Tariffline) or CN8-lenght (for Eurostat) less than 6 are removed.\\
-The pre-analysis script produces a html file that can be read in any browswer, but a suitable solution for the SWS is needed.\\
-This script should be part of the validation steps within the module.
+\begin{itemize}
+\item[Progress status] In the vignettes folder, a sample of pre-analysis is given, but not integrated in the main module (file name: {\tt preanalysis\_2009.Rmd}). The pre-analysis script calculate the total number of recordsfor both Eurostat and UNSD Tariffline datasets and the distribution of lenght of the commodty HS codes (for UNSD Tariffline) and CN8 for Eurostat is performed. For each country we report if data includes imports, exports, re-exports and re-imports at all possible lenght. All records with hs-lenght (for UNSD Tariffline) or CN8-lenght (for Eurostat) less than 6 are removed. The pre-analysis script produces a html file.
+\item[Next activities] The pre-analyses of the assessment of the data has to be integrated in the module. The script is just a guide but improvements are needed (i.e. tables).
+\end{itemize}
 
 \subsubsection{Report and check of discarded elements after mapping}
-Each mapping routine might produce some unsolved mapping. At the moment the module is saving the unsolved mapping records in a separated variable, but not reported. All unsolved mapping should be reported and possibly solved in the future.
+\begin{itemize}
+\item[Progress status] At the moment the module is saving the unsolved mapping records in a separated variable, but not reported anywhere.
+\item[Next activities] Each mapping routine might produce some unsolved mapping. All unsolved mapping should be reported and possibly solved in the future.
+\end{itemize}
 
 \subsubsection{Destination Table}
-The {\tt complete\_tf\_cpc} module produces output for all the records passing all the routines and not filtered out. The module does not check if any commodity is missing. A possible solution would be to have a destination table with all the commodities of interest and the module should fill the destination table. In this way the output validation step should be achieved.
+\begin{itemize}
+\item[Next activities] The {\tt complete\_tf\_cpc} module produces output for all the records passing all the routines and not filtered out. The module does not check if any commodity is missing. A possible solution would be to have a destination table with all the commodities of interest and the module should fill the destination table. In this way the output validation step should be achieved.
+\end{itemize}
 
-\subsection{Unbalanced World Trade Matrix}
-Before the aggregation, a trade imbalances report might be produced.
 
 \subsection{Time Series Analysis}
-Upon availability of time-series data, a check of the CPC-based unit values accross the time series should be performed. Differentiation between errors in the order of magnitude (time series) and outliers (cross section). An additional submodule of imputation of missing data using time series analysis would be a solution.
+\begin{itemize}
+\item[Next activities] Upon availability of time-series data, a check of the CPC-based unit values accross the time series should be performed. Differentiation between errors in the order of magnitude on quantities and values (time series) and outliers (cross section). An additional submodule of imputation of missing data using time series analysis would be a solution.
+\end{itemize}
+
 
 \subsection{CIF/FOB}
-The CIF/FOB correction for mirroring is, at the time being, set up to 12\%. This has been suggested by team B/C, but additional work might be done in order to assess if the estimate is appropriate. There might be different range of percentages for different type of countries and by distance between reporters and partners.\\
-A study can be conducted on available records on both side: this means records for which the commodity is reported by the reporter and by the partner.
+\begin{itemize}
+\item[Progress status] The CIF/FOB correction for mirroring is, at the time being, set up to 12\%. This has been suggested by team B/C.
+\item[Next activities] Additional work might be done in order to assess if the estimate is appropriate. There might be different range of percentages for different type of countries and by distance between reporters and partners. A study can be conducted on available records on both side: this means records for which the commodity is reported by the reporter and by the partner.
+\end{itemize}
 
 \subsection{Re-import and Re-export}
-At the moment all re-import and re-export is considered as, respectively, import and export. More study might be conducted in order to identify countries more prone to report re-import and re-export.
+\begin{itemize}
+\item[Progress status] All re-import and re-export is considered as, respectively, import and export.
+\item[Next activities] More study might be conducted in order to identify countries more prone to report re-import and re-export.
+\end{itemize}
 
 \subsection{Self Trade Analysis}
-For all the records having the same reporter and partner an analysis is performed on a separate script within the {\tt vignette} folder: {\tt selftrade.R}. This might be incorporated in the module and might produce suitable output within the SWS.\\
-The sum of the value is computed for both countries and commodity, in order to spot out the countries reporting massive self trade and which are the main commodity reported as self trade. Summary statistics are computed world wide.
+\begin{itemize}
+\item[Progress status] For all the records having the same reporter and partner an analysis is performed on a separate script within the {\tt vignette} folder: {\tt selftrade.R}. The sum of the value is computed for both countries and commodity, in order to spot out the countries reporting massive self trade and which are the main commodity reported as self trade. Summary statistics are computed world wide.
+\item[Next activities] This might be incorporated in the module and might produce suitable output within the SWS. More documentation is needed.
+\end{itemize}
 
 \subsection{Pseudo-automatic mapping of commodities}
-An additional method has to be added in the future: the algorithm should try to trim the code not mapped and try to map them with shorter HS codes. If any of shorter codes (from right to left) are then not mapped, we can definitely discard the record.
+\begin{itemize}
+\item[Next activities] An additional method has to be added in the future: the algorithm should try to trim the code not mapped and try to map them with shorter HS codes. If any of shorter codes (from right to left) are then not mapped, we can definitely discard the record.
 If a specific record has a HS code not mapping to any specific FCL code, then the record is reported and removed.
+\end{itemize}
 
 \subsection{Mapping from HS to FCL}
-In the module for commodities we have 2 different mapping. From HS to FCL, using mapping produced by team B/C and then from FCL to CPC 2.1. This mapping is available for the following years: 1997, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013. The following years are missing: 1998, 1999, 2000. The mapping for 2014 has been copied from year 2013, but the results need to be checked.\\
-In the future direct mapping from HS to CPC has been asked from managment. A possible solution with the mapping to CPC has been sent to Carola (09.06.2016), but anyway this needs revision.
+\begin{itemize}
+\item[Progress status] In the module for commodities we have 2 different mapping. From HS to FCL, using mapping produced by team B/C and then from FCL to CPC 2.1. This mapping is available for the following years: 1997, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013. The following years are missing: 1998, 1999, 2000. The mapping for 2014 has been copied from year 2013, but the results need to be checked.
+\item[Next activities] In the future direct mapping from HS to CPC has been asked from managment. A possible solution, where adding the column with the one-to-one CPC codes has been sent to Carola (09.06.2016), but anyway this needs revision (\href{https://drive.google.com/drive/folders/0B_Z6srBtmyJRUmtaaXphTllZUDA}{link})
+\end{itemize}
 
 \subsection{Mapping from Comtrade M49 and Geonomenclature directly to M49}
-The country codes, as the commodity ones, have two step of mapping. This results in higher risk of data loss due to unsolved mapping. In the future a direct map from Comtrade M49 (Tariffline UNSD) to M49 and from Geonomenclature (Eurostat) to M49 would be ideal.
+\begin{itemize}
+\item[Progress status] The country codes, as the commodity ones, have two step of mapping. This results in higher risk of data loss due to unsolved mapping.
+\item[Next activities] A direct map from Comtrade M49 (Tariffline UNSD) to M49 and from Geonomenclature (Eurostat) to M49 would be ideal.
+\end{itemize}
 
 \subsection{Flag correction}
-Flags: when mirroring is performed, the quantity will stay official, while the value will change flag (high priority)
+\begin{itemize}
+\item[Pending activities] This activities have high priority
+\begin{enumerate}
+\item When mirroring is performed, the quantity will stay official, while the value will change flag (high priority)
+\item In case of official figure the methodology has to be 'h' and not empty.
+\end{enumerate}
+\end{itemize}
 
 \subsection{Outlier coefficient}
-The outlier coefficient is set up to 1.5. The outlier coefficient is a input parameter of the {\tt complete\_tf\_cpc} submodule. After discussion with team B/C (23.06.2016) a specific analysis has to be perfomed to understand what is the best coefficient to be used in order to reflect old results. After this analysis, the outlier coefficient should be hard-coded within the code of the module without letting the user to modify it anymore.
+\begin{itemize}
+\item[Progress status] The outlier coefficient is set up to 1.5. The outlier coefficient is a input parameter of the {\tt complete\_tf\_cpc} submodule.
+\item[Pending activities] After discussion with team B/C (23.06.2016) a specific analysis has to be perfomed to understand what is the best coefficient to be used in order to reflect old results. After this analysis, the outlier coefficient should be hard-coded within the code of the module without letting the user to modify it anymore.
+\end{itemize}
 
 
 \subsection{Food-aid}
-This has to be incorporated also to understand the trend in a time series analysis. This needs special study to understand if we can get the data just from the exports not reported as imports in the partner.
-
+\begin{itemize}
+\item[Next activities] This has to be incorporated also to understand the trend in a time series analysis. This needs special study to understand if we can get the data just from the exports not reported as imports in the partner.
+\end{itemize}
 
 \section*{Disclaimer}
 This Working Paper should not be reported as representing the official view of
@@ -346,8 +334,7 @@ author and do not necessarily represent those of the FAO or FAO
 policy. Working Papers describe research in progress by the authors and
 are published to elicit comments and to further discussion.\\
 
-This paper is dynamically generated on \today{} and is subject to
-changes and updates.
+
 
 
 \end{document}
