--- a/vignettes/Documentation/tradeDocumentation.tex
+++ b/vignettes/Documentation/tradeDocumentation.tex
@@ -169,7 +169,8 @@ changes and updates. Version 1.
 \newpage
 
 
-The trade module is divided in two submodules: {\tt complete\_tf\_cpc} and {\tt total\_trade\_CPC}. Each module is year specific. This means that, at the time being, the trade module run indipendently for each year. In order to run the {\tt total\_trade\_CPC}, the output of {\tt complete\_tf\_cpc} is needed.
+The trade module is divided in two submodules: {\tt complete\_tf\_cpc} and {\tt total\_trade\_CPC}. Each module is year specific. This means that, at the time being, the trade module run indipendently for each year. In order to run the {\tt total\_trade\_CPC}, the output of {\tt complete\_tf\_cpc} is needed.\\
+All tables and graphs present in this documentation are just examples. More details on the data are given in the code.
 
 \section{Complete tf cpc}
 
@@ -178,10 +179,25 @@ Raw data are provided by the SWS Team (subunit of Team F) for both UNSD Tariffli
 \begin{itemize}
 \item [\bf{Eurostat}]
 \begin{itemize}
-\item code of reporter (declarant) just numeric (letters are not allowed)
+\item code of reporter (reporter) just numeric (letters are not allowed)
 \item code of partner (partner) just numeric (letters are not allowed)
-\item code of CN8 (product\_nc) just numeric (letters are not allowed)
+\item code of CN8 (hs) just numeric (letters are not allowed)
 \end{itemize}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   reporter partner       hs flow year  value weight   qty    hs6
+## 1       11      10 85193000    2 2009  83.96    2.2  1010 851930
+## 2       11      10 85198121    1 2009  17.89    0.2  5023 851981
+## 3       11      10 85198121    2 2009 243.69    7.3 13894 851981
+## 4       11      10 85198125    1 2009   1.06    0.0     5 851981
+## 5       11      10 85198125    2 2009  17.07    0.0   171 851981
+## 6       11      10 85198131    1 2009   9.90    0.0   159 851981
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 \item [\bf{UNSD}]
 \begin{itemize}
 \item code of HS (comm) just numeric (letters are not allowed)
@@ -190,17 +206,78 @@ Raw data are provided by the SWS Team (subunit of Team F) for both UNSD Tariffli
 If any codes are still alphanumeric please ask team F to check, since this step is performed by them.\\
 The module downloads only records of commodities of interest for Tariffline Data. The HS chapters are the following: 01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 42, 43, 50, 51, 52, 53. In the future, if other commotidy are of interest for the division, it is important to include additional chapter in the first step of the downloading. For Eurostat Data no filtering is applied.
 
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   reporter partner       hs flow year     value weight qty qunit    hs6
+## 1       90     458     3303    1 2009  54.75252     NA  NA     1   3303
+## 2      184      36 07121000    1 2009 634.93650     NA  NA     1 071210
+## 3      184      36 09011200    1 2009 470.57794     NA  NA     1 090112
+## 4      184     554 12100000    1 2009 544.94550     NA  NA     1 121000
+## 5      184     504 21050020    1 2009 379.96200     NA  NA     1 210500
+## 6       90      36     5203    1 2009  36.37752     NA  NA     1   5203
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+
 
 \subsection{Process}
-
 \subsubsection{Mapping UNSD Tariffline and Eurostat data}
 At this stage a standardization/mapping step is performed. The details are devided between UNSD Tariffline and Eurostat due to the nature of the differences among the two datasets.
 \begin{itemize}
 \item [\bf{UNSD Tariffline}]
 \begin{enumerate}
 \item UNSD Tariffline data reports area code with Tariffline M49 standard (which are different for official M49). The area code is converted in FAO country code using a specific convertion table provided by Team ENV. Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) are separately saved and removed from further analyses.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##     m49 fao
+## 164 270  75
+## 26  280  79
+## 294 716 181
+## 241 634 179
+## 38  471 252
+## 106  51   1
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 \item Commodity codes are reported in HS codes ({\it Harmonized Commodity Description and Coding System}). The codes are converted in FCL (FAO Commodity List) codes. This step is performed using table incorporated in the SWS. In this step, all the mapping between HS and FCL code is stored. If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed. All records without an FCL mapping are filtered out and saved in specific variables.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##    validyear area flow   fromcode     tocode  fcl
+## 1         NA   81    2 0407001900 0407001900 1062
+## 2         NA  154    2 2009291100 2009291100  510
+## 3       2009  157    1 0714200090 0714200090  122
+## 4         NA  211    1   20059910   20059910  472
+## 5         NA   84    2   02073685   02073685 1075
+## 6         NA  101    2  230610000  230619999  332
+## 7         NA   13    2   19052000   19052999   22
+## 8         NA  236    2 0204210000 0204210000  977
+## 9         NA  134    1   04069019   04069019  904
+## 10        NA    9    1   09012100   09012199  657
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+
 \item Information of the FCL units is added.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   fcl fclunit
+## 1  15      mt
+## 2  16      mt
+## 3  17      mt
+## 4  18      mt
+## 5  19      mt
+## 6  20      mt
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 \item Just for UNSD Tariffline data convertion of units of measurements are applied to meet FAO standards, where all weights are reported in metric tonnes, animals in heads or 1000 heads and for some commodity just the value is provided.
 \item The flow codes of re-Import (4) are recoded into Import (1) and codes of re-Export (3) to Export (2). This procedure is applied following UNSD standards:
 \begin{quote}
@@ -212,11 +289,39 @@ Exports of a country can be distinguished as exports of domestic goods and expor
 \item [\bf{Eurostat}]
 \begin{enumerate}
 \item Eurostat classifies areas in their geonomenclature. The are code is converted in FAO country code using a specific convertion  table, stored in the SWS, provided by Team B/C.  Area codes not mapping to any FAO country code or mapping to code 252 (which correpond not defined area) is reported and the records for these area codes are removed.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   ComM49 FAO         Name
+## 1      1  68 France      
+## 2      2  15 Belg.-Luxbg 
+## 3      3 150 Netherlands 
+## 4      4  79 Fr Germany  
+## 5      5 106 Italy       
+## 6      6 229 Utd. Kingdom
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 \item Commodity codes are reported in CN8 codes (Combined Nomenclature 8 digits). The codes are converted in FCL (FAO Commodity List) codes. This step is performed using the same package ({\tt hsfclmap}) as for UNSD Tariffline.
 If a specific record has a CN8 code not mapping to any specific FCL code, then the record is reported and removed. If a country is not included in the package of the mapping for that specific year, all the records for the reporting country are removed.\\
-Eurostat data are already provided in the correct units of measurements and do not need futher conversions.
-\item Information of the FCL units is added. This step is straighforward since for Eurostat the units are already corrected.
+Eurostat data are already provided in the correct units of measurements and do not need futher conversions. (No need of example, same as before).
+\item Information of the FCL units is added. This step is straighforward since for Eurostat the units are already corrected. (No need of example, same as before).
 \item Values are converted from EUR to USD using the table, stored in the SWS, with avarage currency for each year provided by Team B/C.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   Year ExchangeRate
+## 1 2000     0.924020
+## 2 2001     0.892860
+## 3 2002     0.946000
+## 4 2003     1.131200
+## 5 2004     1.243304
+## 6 2005     1.245755
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 \end{enumerate}
 \end{itemize}
 
@@ -228,6 +333,21 @@ UNSD Tariffline and Eurostat datasets are ready to be merged togheter. From UNSD
 \item {\bf Application of Notes} Perennial and yearly specific notes are mdb files provided by the Team B/C already saved in a R friendly dataset. The notes might be of different nature. They might be a multiplicative factor, or forcing a value. More information  about the notes can be provided by team B/C. The notes might be year specific or for all years (in this case reported as NA) and might refer to HS or/and FCL codes. This notes (or adjustments) were developed during the years and they are available from 1997 to 2013. Notes of 2014 are copied from notes in 2013, as a partial solution, but this need future work in the future.\\
 Comparing results between the new and the old procedure showed that sometimes the discrepancies between the two results are due to the application of the notes.\\
 Remark: at the time being, the notes with unspecified year and with application of a factor 1000 are removed, since in the previous years UNSD was reporting some data in tonnes, while now it reports all data in kg.\\
+More details on how to read the notes can be given by team B/C.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+##   year flow      hs  fcl partner weight  qty value special reporter
+## 1 2012    1      NA   17      NA     10 <NA>  <NA>    <NA>        8
+## 2 2005    2      NA 1168      NA    100 <NA>  <NA>    <NA>       11
+## 3   NA   NA      NA  836      NA    0.6 <NA>  <NA>    <NA>       52
+## 4 2013    4      NA  702     194    0.1 <NA>  <NA>    <NA>       13
+## 5 2011    1      NA 1061      NA    0.1 <NA>  <NA>    <NA>       37
+## 6 2013    2 9030000  671     231     10 <NA>  <NA>    <NA>       33
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
 
 \item {\bf Unit Values computation} For each record having both quantity and value (thus excluding all commodity reported just as value), the unit of value ($u_v$) is computed as following:
 \begin{equation}
@@ -333,7 +453,23 @@ This section represents the most high priority task for the trade module.\\
 
 \subsection{Self Trade Analysis}
 \begin{itemize}
-\item[Progress status] For all the records having the same reporter and partner an analysis is performed on a separate script within the {\tt vignette} folder: {\tt selftrade.R}. The sum of the value is computed for both countries and commodity, in order to spot out the countries reporting massive self trade and which are the main commodity reported as self trade. Summary statistics are computed world wide.
+\item[Progress status] A script within the {\tt vignette} folder, named {\tt selftrade.R}, has been used to perform some simple analyses on the self trade. The script filter all records for which the reporter and the partner are the same. The script compute the sum of all value across all commodities per country (Figure 1), or the sum of all the value for each commodity across all countries (Figure 2). In this way we can spot out the countries reporting massive self trade as well as which are the main commodities reported in self trade.\\
+This is an example of the graphical output (still part of the script).
+\begin{center}
+\begin{figure}
+\includegraphics[scale=0.5]{../selftrade_by_country_name}
+\caption{Sum of all self trade records by country.}
+\end{figure}
+\end{center}
+
+\begin{center}
+\begin{figure}
+\includegraphics[scale=0.5]{../selftrade_by_commodity_code}
+\caption{Sum of all self trade records by commodity. Codes in FCL.}
+\end{figure}
+\end{center}
+
+
 \item[Next activities] This might be incorporated in the module and might produce suitable output within the SWS. More documentation is needed.
 \end{itemize}
 
